[package]
name = "aarch64"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2021"

[dependencies]
aarch64-rt = "0.1.0"
aarch64-paging = "0.8.0"
arm-pl011-uart = "0.3.0"
buddy_system_allocator = "0.11.0"
flat_device_tree = "3.1.1"
log = "0.4.27"
safe-mmio = "0.2.4"
smccc = "0.2.0"
spin = "0.10.0"
virtio-drivers = { path = "../.." }
