[package]
name = "riscv"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2024"

[features]
tcp = ["smoltcp"]
default = ["tcp"]

[dependencies]
log = "0.4.29"
riscv = "0.16"
opensbi-rt = { git = "https://github.com/rcore-os/opensbi-rt.git", rev = "abdfeb72" }
flat_device_tree = "3.1.1"
virtio-drivers = { path = "../.." }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
zerocopy = { version = "0.8.40", features = ["derive"] }

[dependencies.smoltcp]
version = "0.13.0"
optional = true
default-features = false
features = [
  "alloc",
  "log",
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw",
  "socket-icmp",
  "socket-udp",
  "socket-tcp",
]
